--- a/src/app/commissions/commissions.scss
+++ b/src/app/commissions/commissions.scss
@@ -1,5 +1,5 @@
 #page_commissions {
-  min-height: 15000px;
+  // min-height: 15000px;
   #main-service {
     // height: 1500px;
     margin-top: -250px;
