--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -93,7 +93,7 @@ body {
 .h {
   font-family: var(--fontsb);
   font-size: 3rem;
-  line-height: 0.8;
+  line-height: 0.9;
   letter-spacing: -1px;
   color: var(--grey);
 }
@@ -143,4 +143,15 @@ p {
 }
 .inner-shadow-l {
   box-shadow: inset 10px 0px 50px 20px #062e48;
+}
+
+body {
+  &:has(#page_portfolio) {
+    #header {
+      display: none;
+    }
+    #footer {
+      display: none;
+    }
+  }
 }
