--- a/src/app/portfolio/portfolio.scss
+++ b/src/app/portfolio/portfolio.scss
@@ -79,21 +79,42 @@
         white-space: nowrap;
         overflow-x: auto;
         gap: 2em;
+        padding-right: 50vh;
         .row {
           flex-shrink: 0;
           display: flex;
           flex-direction: column;
           width: 600px;
           gap: 1.5em;
+
           .pitems {
             width: 100%;
             height: 400px;
+            &::before {
+              content: "";
+              position: absolute;
+              top: 0%;
+              left: 0%;
+              width: 100%;
+              height: 100%;
+              z-index: 10;
+              // background: red;
+              user-select: none;
+              pointer-events: none;
+
+              box-shadow: inset 0px 0px 40px 20px #283f58;
+            }
+            position: relative;
             .main-pt {
               width: 100%;
               position: relative;
-              z-index: -2;
+              z-index: 1;
               object-fit: cover;
               height: 100%;
+              box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.193);
+            }
+            video.main-pt {
+              z-index: 10;
             }
           }
         }
