--- a/src/app/portfolio/portfolio.scss
+++ b/src/app/portfolio/portfolio.scss
@@ -13,6 +13,50 @@
       padding: 1em;
       box-shadow: 0px 10px 20px rgba(84, 153, 222, 0.562);
       padding: 4em;
+      position: relative;
+      z-index: 1;
+
+      .frame-edge {
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        width: 110px;
+        height: 110px;
+        object-fit: contain;
+        object-position: top;
+      }
+
+      .cloud-edge {
+        position: absolute;
+        bottom: 0%;
+        left: 0%;
+        width: 150px;
+        height: 150px;
+        object-fit: contain;
+        object-position: bottom;
+        z-index: -1;
+      }
+      .corner-top {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        width: 55px;
+        height: 55px;
+        border-top: 4px solid var(--gold);
+        border-right: 4px solid var(--gold);
+      }
+      .top {
+        position: relative;
+        .de-moon {
+          position: absolute;
+          top: 0%;
+          left: 20%;
+          width: 100%;
+          scale: 1.4;
+          object-fit: contain;
+          z-index: -1;
+        }
+      }
 
       .side-action {
         display: flex;
