--- a/src/app/portfolio/portfolio.scss
+++ b/src/app/portfolio/portfolio.scss
@@ -7,12 +7,12 @@
     // background: red;
     min-height: 100vh;
     display: grid;
-    grid-template-columns: 410px 1fr;
+    grid-template-columns: 400px 1fr;
     #sidebar {
       background: linear-gradient(to top, #0e81a5, #283f58);
       padding: 1em;
       box-shadow: 0px 10px 20px rgba(84, 153, 222, 0.562);
-      padding: 4em;
+      padding: 3em;
 
       .side-action {
         display: flex;
@@ -40,16 +40,12 @@
           margin: 1em 0;
         }
       }
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+
       .categories {
         display: flex;
-        justify-content: flex-end;
         flex-direction: column;
-        // margin-top: 5em;
+        margin-top: 5em;
         gap: 0.5em;
-        margin-bottom: 4em;
         .btn-cat {
           width: 100%;
           text-align: left;
@@ -94,14 +90,6 @@
           .pitems {
             width: 100%;
             height: 400px;
-            transition: all 450ms var(--mainEase);
-
-            &:hover {
-              scale: 1.05;
-            }
-            &:active {
-              scale: 0.96;
-            }
             &::before {
               content: "";
               position: absolute;
@@ -145,37 +133,6 @@
         padding: 0.25em 1em;
         box-sizing: 0px 0px 4px var(--black);
       }
-    }
-  }
-
-  #fs-gallery {
-    position: fixed;
-    background: rgba(7, 19, 33, 0.675);
-    height: 100vh;
-    width: 100vw;
-    z-index: 100;
-    backdrop-filter: blur(5px);
-    transition: all 1500ms var(--mainEase);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    .art-part {
-      width: 90vw;
-      height: 90vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      // background: red;
-      .main-pt {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-      }
-    }
-    &.close {
-      opacity: 0;
-      user-select: none;
-      pointer-events: none;
     }
   }
 }
