--- a/src/app/commissions/commissions.scss
+++ b/src/app/commissions/commissions.scss
@@ -18,7 +18,7 @@
       width: 100%;
       object-fit: cover;
       height: 100%;
-      opacity: 0.25;
+      opacity: 0.2;
       mix-blend-mode: color-burn;
       pointer-events: none;
     }
@@ -33,6 +33,7 @@
     }
     .steps {
       background: var(--lBlue);
+      box-shadow: 0px 0px 25px rgba(11, 44, 77, 0.253);
       .confine {
         // display: flex;
 
@@ -103,6 +104,7 @@
         background: var(--lBlue);
         border-radius: 50%;
         padding: 1.5em;
+        box-shadow: 0px 0px 10px rgba(11, 44, 77, 0.614);
         svg {
           width: 100%;
           height: 100%;
