--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -5,6 +5,18 @@
   border-radius: 4em 4em 0 0;
   position: relative;
 
+  .gold-branch {
+    position: absolute;
+    &.l {
+      left: -40px;
+      top: 50px;
+    }
+    &.r {
+      right: -60px;
+      scale: -1 1;
+      top: 80px;
+    }
+  }
   .splat-top {
     position: absolute;
     width: 100%;
@@ -84,6 +96,7 @@
           rotate: 45deg;
           &:hover {
             background: var(--gold);
+            scale: 1.2;
             svg {
               color: var(--black);
             }
