Add decor to commissions page

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -129,6 +129,10 @@ p {
   line-height: 1.4;
   color: var(--lGrey);
 }
+.p {
+  font-family: var(--fontP);
+  line-height: 1.4;
+}
 
 .clip {
   width: 50px;
