--- a/src/app/commissions/commissions.scss
+++ b/src/app/commissions/commissions.scss
@@ -6,8 +6,21 @@
     background: rgba(245, 250, 253, 0.3);
     position: relative;
     top: -10%;
-    padding-top: 250px;
+    padding-top: 320px;
     padding-bottom: 150px;
+
+    .border {
+      position: absolute;
+      z-index: -10;
+
+      // height: 500px;
+      &.l {
+        left: -800px;
+      }
+      &.r {
+        right: -800px;
+      }
+    }
     .smoke-bg {
       z-index: -2;
       // background: red;
@@ -48,8 +61,21 @@
           position: relative;
           padding-bottom: 5em;
           transition: all 300ms var(--mainEase);
+
+          .de-flower {
+            position: absolute;
+            bottom: 0%;
+            right: 0%;
+            height: 80px;
+            rotate: -20deg;
+            transition: all 300ms var(--mainEase);
+            opacity: 0.4;
+          }
           &:hover {
             transform: translateX(1%);
+            .de-flower {
+              opacity: 1;
+            }
           }
           &:not(:last-of-type) {
             &::before {
@@ -163,13 +189,36 @@
     min-height: 1500px;
     color: var(--gold);
     padding-top: 140px;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+    .edge {
+      position: absolute;
+
+      &.l {
+        top: 0%;
+        left: 0%;
+      }
+      &.r {
+        top: 0%;
+        scale: -1 1;
+        right: 0%;
+      }
+    }
+    .branch-top {
+      position: absolute;
+      right: 10%;
+      z-index: -1;
+      top: 0%;
+      opacity: 1;
+      scale: -2;
+      opacity: 0.05;
+    }
     .confine {
       margin: 0 auto;
       max-width: 1200px;
     }
 
-    .price-list {
-    }
     .btn-examples {
       color: var(--gold);
       background: #0e1517;
@@ -238,6 +287,8 @@
     }
 
     .price-list {
+      position: relative;
+
       h3.h {
         font-size: 2.2rem;
         color: var(--gold);
@@ -255,6 +306,10 @@
           border: 2px solid var(--gold);
           box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.41);
           padding: 0.25em 0.8em;
+          transition: all 500ms var(--mainEase);
+          &:hover {
+            transform: translateY(4%);
+          }
           .name {
             font-size: 1rem;
             opacity: 0.7;
@@ -349,11 +404,26 @@
 
     .list-pricing {
       margin: 240px 0;
+
+      .branch {
+        position: absolute;
+        scale: -2 2;
+        right: 0%;
+        rotate: -20deg;
+        opacity: 0.04;
+      }
       .price-heading {
         margin-bottom: 70px;
       }
 
       &:nth-of-type(even) {
+        .branch {
+          position: absolute;
+          scale: 2;
+          left: 10%;
+          rotate: 20deg;
+          opacity: 0.05;
+        }
         & > .confine {
           display: flex;
           flex-direction: row-reverse;
@@ -408,7 +478,7 @@
               left: 0%;
               width: 100%;
               height: 100%;
-              outline: 4px solid var(--gold);
+              outline: 2px solid var(--gold);
               outline-offset: -20px;
               z-index: 10;
             }
@@ -457,7 +527,22 @@
       margin: 0 auto;
     }
     #timeline-heading {
-      margin: 100px 0;
+      margin: 20px 0;
+      margin-bottom: 150px;
+      position: relative;
+      .cloud {
+        position: absolute;
+        &.l {
+          left: -150px;
+          top: -180px;
+          rotate: -40deg;
+        }
+
+        &.r {
+          right: -150px;
+          top: -150px;
+        }
+      }
       .confine {
         display: grid;
         grid-template-columns: 1.1fr 1fr;
@@ -465,6 +550,13 @@
         gap: 3em;
         align-items: center;
         figure {
+          .splat {
+            position: absolute;
+            z-index: -100;
+            left: 10%;
+            scale: 2;
+            opacity: 0.4;
+          }
           position: relative;
           &::before {
             content: "";
@@ -489,6 +581,15 @@
         }
 
         article {
+          position: relative;
+          .de-moon {
+            position: absolute;
+            top: -50%;
+            left: 75%;
+            scale: 1.5;
+            z-index: -2;
+            height: 150%;
+          }
           .p {
             margin: 1em 0;
           }
@@ -503,8 +604,24 @@
     }
     .step {
       background: #f4fbff;
+      position: relative;
 
+      .branch {
+        position: absolute;
+        top: -100px;
+        left: -50px;
+        scale: 1;
+        width: 400px;
+      }
       &:nth-of-type(even) {
+        .branch {
+          position: absolute;
+          top: -100px;
+          right: -50px;
+          left: initial;
+          width: 300px;
+          scale: -1 1;
+        }
         .confine {
           display: flex;
           flex-direction: row-reverse;
@@ -547,6 +664,11 @@
             pointer-events: none;
           }
           .detail {
+            // &:hover {
+            //   background: rgba(7, 56, 95, 0.108);
+            //   padding: 1em;
+            // }
+            transition: all 450ms var(--mainEase);
             .h {
               font-size: 1.9rem;
               color: #283f58;
