Add decor to artist

--- a/src/app/portfolio/portfolio.scss
+++ b/src/app/portfolio/portfolio.scss
@@ -141,6 +141,7 @@
             height: 400px;
             transition: all 450ms var(--mainEase);
 
+            cursor: pointer;
             &:hover {
               scale: 1.05;
             }
