--- a/src/app/artists/artists.scss
+++ b/src/app/artists/artists.scss
@@ -2,6 +2,21 @@
   // min-height: 15000px;
   #artist-heading {
     display: flex;
+    position: relative;
+
+    padding-top: 100px;
+
+    .border {
+      position: absolute;
+      height: 300px;
+      top: 80px;
+      &.l {
+        left: -200px;
+      }
+      &.r {
+        right: -200px;
+      }
+    }
     .confine {
       max-width: 1100px;
       margin: 0 auto;
@@ -18,6 +33,14 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 2em;
+        position: relative;
+        .splat {
+          position: absolute;
+          height: 100%;
+          z-index: -1;
+          scale: 1.7;
+          opacity: 0.5;
+        }
         img {
           width: 100%;
           height: 250px;
