--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -71,6 +71,13 @@
       flex-direction: column;
       align-items: center;
       margin: 100px 0;
+      position: relative;
+      .stroke-moon {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
       .logo {
         width: 180px;
       }
