--- a/src/app/portfolio/portfolio.scss
+++ b/src/app/portfolio/portfolio.scss
@@ -73,6 +73,14 @@
         }
       }
       .heading {
+        position: relative;
+        // .de-moon {
+        //   height: 100%;
+        //   width: 100%;
+        //   top: 0%;
+        //   position: absolute;
+        //   object-fit: contain;
+        // }
         .sh {
           // color: white;
         }
