--- a/src/app/contact/contact.scss
+++ b/src/app/contact/contact.scss
@@ -1,4 +1,46 @@
 #page_contact {
+  .loader {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background: rgba(13, 45, 86, 0.615);
+
+    top: 0%;
+    left: 0%;
+    z-index: 100;
+    backdrop-filter: blur(5px);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    font-size: 1.5rem;
+    svg {
+      @keyframes speen {
+        from {
+          rotate: 0deg;
+        }
+        to {
+          rotate: 360deg;
+        }
+      }
+      animation: speen 2s infinite ease-in-out;
+      scale: 1.2;
+    }
+    p {
+      color: white;
+    }
+
+    transition: all 1500ms ease;
+
+    &.loaded {
+      opacity: 0;
+      user-select: none;
+      pointer-events: none;
+      transition-delay: 500ms;
+    }
+  }
   #contact {
     max-width: 1000px;
     margin: 0 auto;
