Add animation to the rest of home page

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -109,6 +109,7 @@ body {
   font-size: 2rem;
   font-family: var(--fontsb);
   line-height: 0.7;
+  padding: 0.25em 0;
 }
 .h {
   font-family: var(--fontsb);
