--- a/src/app/commissions/commissions.scss
+++ b/src/app/commissions/commissions.scss
@@ -60,7 +60,7 @@
           padding: 1.5em;
           position: relative;
           padding-bottom: 5em;
-          transition: all 300ms var(--mainEase);
+          // transition: all 300ms var(--mainEase);
 
           .de-flower {
             position: absolute;
@@ -72,7 +72,7 @@
             opacity: 0.4;
           }
           &:hover {
-            transform: translateX(1%);
+            // transform: translateX(1%);
             .de-flower {
               opacity: 1;
             }
@@ -124,6 +124,9 @@
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       gap: 80px;
+      .category {
+        padding: 1em;
+      }
       .icon {
         width: 110px;
         height: 110px;
@@ -398,6 +401,7 @@
         overflow: hidden;
         .splat {
           position: absolute;
+          opacity: 0.8;
           right: 0%;
           bottom: -290px;
           scale: 0.9;
@@ -656,7 +660,7 @@
           gap: 50px;
           position: relative;
           padding: 70px 70px;
-          &::before {
+          .border {
             content: "";
             position: absolute;
             top: 0%;
@@ -676,7 +680,7 @@
             //   background: rgba(7, 56, 95, 0.108);
             //   padding: 1em;
             // }
-            transition: all 450ms var(--mainEase);
+            // transition: all 450ms var(--mainEase);
             .h {
               font-size: 1.9rem;
               color: #283f58;
