--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -39,6 +39,8 @@ p {
 .btn {
   cursor: pointer;
   transition: all 400ms cubic-bezier(0.33, 1, 0.68, 1);
+
+  white-space: nowrap;
   &:hover {
     scale: 1.05;
   }
@@ -56,9 +58,16 @@ button {
   font-family: var(--fontsb);
 }
 
+html,
 body {
-  overflow-x: hidden;
-  max-width: 100vw;
+  // overflow-y: clip;
+
+  // touch-action: pan-y;
+}
+main {
+  overflow-x: clip;
+  position: relative;
+  // max-width: 100vw;
 }
 
 .ni {
