--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -4,6 +4,14 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 3em;
+    overflow-x: clip;
+    @media screen and (max-width: 1440px) {
+      // display: gr;
+      grid-template-columns: 1.5fr 2fr;
+    }
+    @media screen and (max-width: 1024px) {
+      grid-template-columns: 1fr;
+    }
     .title-group {
       .top-part {
         display: flex;
@@ -13,6 +21,9 @@
         padding-right: 50px;
         padding-top: 2em;
 
+        @media screen and (max-width: 1440px) {
+          margin-left: 5%;
+        }
         .sh {
           font-size: 3rem;
         }
@@ -36,6 +47,10 @@
           width: 100%;
           height: 100%;
           object-position: center;
+
+          @media screen and (max-width: 1440px) {
+            object-fit: 1600px;
+          }
         }
         .overlay {
           position: absolute;
