Add res to home page

--- a/src/app/commissions/commissions.scss
+++ b/src/app/commissions/commissions.scss
@@ -401,7 +401,7 @@
         overflow: hidden;
         .splat {
           position: absolute;
-          opacity: 0.8;
+          // opacity: 0.8;
           right: 0%;
           bottom: -290px;
           scale: 0.9;
